[package]
name = "near-methods"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.21", features = ["full"] }
serde_json = "1.0.55"
regex = "1"
wasmparser = "0.95.0"
base64 = "0.13.1"
